--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 
 <body>
 
-    <form action="submit">
-        <button>  </button>
-    </form>
+    <!-- Intro Text Will begin the cyoa. Here, you will get a breif explanation of the scenario you are in. Explanation of the dinner party will take place. -->
+    <!-- <button onclick="write_a1s1t1()"> Start </button>
+    <p id="introPrompt-1"></p>
+    <button onclick="write_a1s1t2()"> New Text </button>
+    <p id="introPrompt-2"></p> -->
 
-
+    <button onclick="typeWriter()">Click me</button>
+    
+    <p id="demo"></p>
 
 </body>
 
