cyoa intro text setup

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title> Murder Mystery </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="script.js"></script>
-
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <!-- <script src="js/script.js"></script> -->
+    <!-- <script src="js/decision.js"></script> -->
+    
 </head>
 
 <body>
+        <script src="js/login.js"></script>
 
-    <!-- Intro Text Will begin the cyoa. Here, you will get a breif explanation of the scenario you are in. Explanation of the dinner party will take place. -->
-    <button onclick="write_a1s1t1()"> Start </button>
-    <p id="introPrompt-1"></p>
+    <div class="game-container"></div>
 
-    <!-- <button onclick="write_a1s1t2()"> New Text </button>
-    <p id="introPrompt-2"></p> -->
+    <div class="dec-container"></div>
 
-    <button onclick="typeWriter()">Click me</button>
-    
-    <p id="demo"></p>
+    <div class="char-container"></div>
 
+    <div class="inventory"></div>
 </body>
 
 </html>
