--- a/index.html
+++ b/index.html
@@ -8,21 +8,36 @@
     <title> Murder Mystery </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <!-- <script src="js/script.js"></script> -->
     <!-- <script src="js/decision.js"></script> -->
-    
+
 </head>
 
 <body>
-        <script src="js/login.js"></script>
+    <!-- <script src="js/login.js"></script> -->
 
-    <div class="game-container"></div>
 
-    <div class="dec-container"></div>
+    <div class="wrapper">
+        <div class="game-container"></div>
 
-    <div class="char-container"></div>
+        <div class="dec-container"></div>
 
-    <div class="inventory"></div>
+        <div class="char-container">
+            <h2> John Doe </h2>
+
+            <p> Image goes here </p>
+        </div>
+
+        <div class="inventory">
+            <h3> Inventory </h3>
+            <ul>
+                <li> flashlight </li>
+            </ul>
+        </div>
+
+    </div>
+
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
