border changing works completely, add fun border styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p> Image goes here </p>
         </div>
 
-        <div class="inventory">
+        <div class="inv-container">
             <h3> Inventory </h3>
             <ul>
                 <li> flashlight </li>
