added func start to fix race conditions

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="inv-container">
             <h3> Inventory </h3>
-            <ul>
+            <ul id="inv">
                 <li> flashlight </li>
             </ul>
         </div>
